--- a/platformio.ini
+++ b/platformio.ini
@@ -10,24 +10,31 @@
 
 [platformio]
 src_dir = Core/Src
-include_dir = Core/Inc/Driver
+include_dir = Core/Inc
+default_envs = normal
 
-[env:disco_f411ve]
+[env:semihosting]
 platform = ststm32
 board = disco_f411ve
 framework = cmsis
-board_build.f_cpu = 16000000UL
+board_build.f_cpu = 8000000 ; 8MHZ
+build_flags =
+    -D SEMIHOSTING
 
 ; Remove stub implementations
 build_unflags =
     -lnosys
     --specs=nosys.specs
-
 ; Add semihosting flags
 extra_scripts =
     enable_semihosting.py
-
 ; Enable semihosting
 debug_extra_cmds =
     monitor arm semihosting enable
     monitor arm semihosting_fileio enable
+
+[env:normal]
+platform = ststm32
+board = disco_f411ve
+framework = cmsis
+board_build.f_cpu = 8000000 ; 8MHZ
