Verandert port b2 en ini cfg file  voor nieuwe chip

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,3 +38,29 @@ platform = ststm32
 board = disco_f411ve
 framework = cmsis
 board_build.f_cpu = 8000000 ; 8MHZ
+
+[env:bril_semihosting]
+platform = ststm32
+board = nucleo_f411re
+framework = cmsis
+board_build.f_cpu = 8000000 ; 8MHZ
+build_flags =
+    -D SEMIHOSTING
+
+; Remove stub implementations
+build_unflags =
+    -lnosys
+    --specs=nosys.specs
+; Add semihosting flags
+extra_scripts =
+    enable_semihosting.py
+; Enable semihosting
+debug_extra_cmds =
+    monitor arm semihosting enable
+    monitor arm semihosting_fileio enable
+
+[env:bril_normal]
+platform = ststm32
+board = nucleo_f411re
+framework = cmsis
+board_build.f_cpu = 8000000 ; 8MHZ
